[package]
name = "zxcalc"
version = "0.0.1"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
hashbrown = "0.5"
lazy_static = "1.3"
libloading = "0.5"
sortedvec = "0.4"
termion = "1.5"
zxcalc-common = { path = "common" }

[workspace]
members = [
  "common",
  "plugin-base10",
  "plugin-base2",
  "plugin-dB",
  "plugin-day",
  "plugin-hour",
  "plugin-min",
  "plugin-percent",
  "plugin-raw",
  "plugin-sec"
]
