[workspace]
members = [
    ".",
    "infract",
]

[package]
name = "zxcalc"
version = "0.0.1"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
atty = "0.2"
infract = { path = "infract" }
lazy_static = "1.4"
sortedvec = "0.5"
text_io = "0.1"
thiserror = "1.0"

[dependencies.phf]
version = "0.8"
features = ["macros"]

[profile.release]
lto = "thin"
panic = "abort"
